# corrosion-orm

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: code-reviewer.yaml  rust.yaml
crates/cargo-orm-core/: Cargo.toml
crates/cargo-orm-core/src/: lib.rs
crates/cargo-orm-core/src/dialect/: mod.rs  sql_dialect.rs
crates/cargo-orm-core/src/dialect/sqlite_dialect/: sqlite.rs
crates/cargo-orm-core/src/driver/: connection.rs  connection_config.rs  connection_pool.rs  executor.rs  sql_driver.rs
crates/cargo-orm-core/src/driver/sqlite_driver/: mod.rs  sqlite_config.rs  sqlite_connection_pool.rs  sqlite_driver.rs
crates/cargo-orm-core/src/error/: error.rs  mod.rs
crates/cargo-orm-core/src/model/: repository.rs
crates/cargo-orm-core/src/query/: insert.rs  select.rs  update.rs  where_clause.rs
crates/cargo-orm-core/src/schema/: table.rs
crates/cargo-orm-core/src/types/: column_type.rs  mod.rs
crates/cargo-orm-macros/: Cargo.toml
crates/cargo-orm-macros/src/: lib.rs
crates/cargo-orm-macros/src/generator/: mod.rs  repository_generate.rs  schema_generate.rs
crates/cargo-orm-macros/src/model/: parser.rs
crates/cargo-orm-macros/src/utils/: mod.rs
crates/cargo-orm-test/: Cargo.toml
crates/cargo-orm-test/src/: lib.rs
crates/cargo-orm-test/src/dialect/: mod.rs
crates/cargo-orm-test/src/dialect/snapshots/: cargo_orm_test__dialect__tests__generate_ddl_sqlite.snap
crates/cargo-orm-test/src/from_row_impl/: mod.rs  sqlite_row_test.rs
crates/cargo-orm-test/src/query/: insert_tests.rs  select_tests.rs  where_coniditon_test.rs
crates/cargo-orm-test/src/repository_test/: delete_test.rs
crates/cargo-orm-test/src/sqlite_tests/: mod.rs
crates/corrosion-orm/: Cargo.toml
crates/corrosion-orm-cli/: Cargo.toml
crates/corrosion-orm-cli/resources/: BUILD_MIGRATOR.rs  EXAMPLE_TOML.toml  MAIN_MIGRATION.rs  MIGRATOR.rs  README_MIGRATIONS.md
crates/corrosion-orm-cli/src/: main.rs
crates/corrosion-orm-cli/src/migration/: generator.rs  migration.rs  mod.rs
crates/corrosion-orm-cli/src/migraton_registry/: model.rs
crates/corrosion-orm-core/: Cargo.toml
crates/corrosion-orm-core/src/: lib.rs
crates/corrosion-orm-core/src/dialect/: mod.rs  sql_dialect.rs
crates/corrosion-orm-core/src/dialect/sqlite_dialect/: mod.rs  sqlite.rs
crates/corrosion-orm-core/src/driver/: connection.rs  connection_config.rs  connection_pool.rs  db_row.rs  error.rs  executor.rs  from_row_db.rs  mod.rs  sql_driver.rs  transaction.rs
crates/corrosion-orm-core/src/driver/sqlite_driver/: mod.rs  sqlite_config.rs  sqlite_connection.rs  sqlite_connection_pool.rs  sqlite_driver_impl.rs
crates/corrosion-orm-core/src/error/: corrosion_orm_error.rs  mod.rs
crates/corrosion-orm-core/src/model/: cache.rs  cursor_paginator.rs  finder.rs  lazy.rs  lazy_collection.rs  mod.rs  paginator.rs  relation_handler.rs  repository.rs  snapshot.rs
crates/corrosion-orm-core/src/query/: alter.rs  create.rs  delete.rs  drop.rs  insert.rs  insert_plan.rs  join.rs  mod.rs  order_by.rs  query_type.rs  select.rs  to_sql.rs  update.rs  where_clause.rs
crates/corrosion-orm-core/src/schema/: mod.rs  relation.rs  table.rs
crates/corrosion-orm-core/src/types/: column.rs  column_ref.rs  column_trait.rs  column_type.rs  generation_strategy.rs  mod.rs
crates/corrosion-orm-macros/: Cargo.toml
crates/corrosion-orm-macros/src/: lib.rs
crates/corrosion-orm-macros/src/generator/: entity_gen.rs  from_row_generate.rs  insert_plan_generate.rs  mod.rs  repository_generate.rs  schema_generate.rs  validation_generate.rs
crates/corrosion-orm-macros/src/model/: field.rs  index.rs  mod.rs  parser.rs  primary_key.rs  relation.rs  table.rs
crates/corrosion-orm-macros/src/utils/: mod.rs
crates/corrosion-orm-macros/src/validation_parser/: parser.rs
crates/corrosion-orm-migration/: Cargo.toml
crates/corrosion-orm-migration/resources/: MIGRATION_TEMPLATE.rs
crates/corrosion-orm-migration/src/: cli.rs  driver_util.rs  lib.rs  migration.rs  migration_generator.rs  migration_registry.rs  runner.rs  sqlite_executor.rs
crates/corrosion-orm-migration/src/diff_engine/: migration_op.rs  mod.rs
crates/corrosion-orm-test/: Cargo.toml
crates/corrosion-orm-test/src/: diff_engine_tests.rs  lib.rs  test_entities.rs
crates/corrosion-orm-test/src/dialect/: mod.rs
crates/corrosion-orm-test/src/dialect/snapshots/: corrosion_orm_test__dialect__tests__generate_ddl_relation_has_one.snap  corrosion_orm_test__dialect__tests__generate_ddl_sqlite.snap
crates/corrosion-orm-test/src/from_row_impl/: sqlite_row_test.rs
crates/corrosion-orm-test/src/query/: .select_tests.rs.pending-snap  .update_tests.rs.pending-snap  .where_coniditon_test.rs.pending-snap  alter_tests.rs  create_tests.rs  delete_tests.rs  insert_plan_tests.rs  insert_tests.rs  mod.rs  select_tests.rs  update_tests.rs  where_coniditon_test.rs
crates/corrosion-orm-test/src/query/snapshots/: cargo_orm_test__query__insert_tests__tests__insert_sqlite.snap  cargo_orm_test__query__select_tests__tests__select_create_from_table_schema.snap  corrosion_orm_test__query__select_tests__tests__select_create_from_table_schema_sqlite.snap
crates/corrosion-orm-test/src/repository_test/: delete_test.rs  find_test.rs  get_test.rs  mod.rs  relation_test.rs  save_test.rs
crates/corrosion-orm-test/src/sqlite_tests/: mod.rs
crates/corrosion-orm/examples/: composed_filtering.rs  cursor_pagination.rs  delete.rs  eager_fetch.rs  filtering.rs  find.rs  lazy_fetch.rs  ordering.rs  pagination.rs  relation_filtering.rs  save.rs  transaction.rs  validation.rs
crates/corrosion-orm/src/: lib.rs
docs/: README.md  getting-started.md
docs/guides/: column-modules.md  filtering.md  migrations.md  relations.md  transactions.md  type-mapping.md  validation.md
docs/guides/attributes/: README.md  belongs-to.md  column.md  email.md  has-many.md  has-one.md  index.md  not-null.md  pattern.md  primary-key.md  size.md  table.md
