[workspace]
members = ["crates/corrosion-orm",
    "crates/corrosion-orm-core",
    "crates/corrosion-orm-macros",
    "crates/corrosion-orm-test"
, "examples/example1"]
resolver = "3"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
deluxe = "0.5.0"
anyhow = "1.0.100"
chrono = "0.4.44"
thiserror = "2.0.18"
insta = "1.46.3"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
regex = "1.12.3"
once_cell = "1.21.4"
