[workspace]
members = [
    "crates/corrosion-orm",
    "crates/corrosion-orm-cli",
    "crates/corrosion-orm-core",
    "crates/corrosion-orm-macros",
    "crates/corrosion-orm-migration",
    "crates/corrosion-orm-test",
]
resolver = "3"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
deluxe = "0.5.0"
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
insta = "1.46.3"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
regex = "1.12.3"
once_cell = "1.21.4"
trait-variant = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
moka = { version = "0.5.4", features = ["future"] }

# Internal workspace crate path deps (prevents pulling from crates.io)
corrosion-orm-core = { path = "crates/corrosion-orm-core" }
corrosion-orm = { path = "crates/corrosion-orm" }
corrosion-orm-macros = { path = "crates/corrosion-orm-macros" }
corrosion-orm-migration = { path = "crates/corrosion-orm-migration" }
