[package]
name = "cargo-orm-core"
version = "0.1.0"
edition = "2024"
[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio"]
[dependencies]
chrono  = { workspace = true }
deluxe  = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.6", optional = true, default-features = false }
tokio = { workspace = true }
trait-variant = "0.1.2"
