[package]
name = "corrosion-orm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
corrosion-orm = { path = "../corrosion-orm", features = ["sqlite"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = { workspace = true }
chrono = { workspace = true }
trait-variant = { workspace = true }
tokio = { workspace = true }
