[package]
name = "corrosion-orm-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/jakmodz/corrosion-orm"
description = "CLI tool for Corrosion ORM"
[dependencies]
corrosion-orm = { path = "../corrosion-orm", version = "0.1.1", features = ["sqlite"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = { workspace = true }
chrono = { workspace = true }
trait-variant = { workspace = true }
tokio = { workspace = true }
