[package]
name = "corrosion-orm-core"
version = "0.1.0"
edition = "2024"
[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio"]
log = ["dep:log"]
test-utils = []
[dependencies]
chrono  = { workspace = true }
deluxe  = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = [ "runtime-tokio", "chrono"] }
log = { workspace = true, optional = true }
tokio = { workspace = true }
trait-variant = "0.1.2"
