[package]
name = "corrosion-orm-core"
version = "0.1.0"
edition = "2024"
[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio"]
log = ["dep:log"]
test-utils = []
[dependencies]
chrono  = { workspace = true }
deluxe  = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = [ "runtime-tokio", "chrono"] }
log = { workspace = true, optional = true }
tokio = { workspace = true }
regex = {workspace= true}
once_cell = { workspace = true }
trait-variant = { workspace = true }
serde = { workspace = true }
