[package]
name = "corrosion-orm-migration"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["corrosion-orm/sqlite"]
log = ["corrosion-orm/log"]

[dependencies]
corrosion-orm = { path = "../corrosion-orm" }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
