[package]
name = "corrosion-orm"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jakmodz/corrosion-orm"
description = "ORM library for Rust using SQLx and Tokio"
[dependencies]
corrosion-orm-core = { version = "0.1.0" }
corrosion-orm-macros = { version = "0.1.0" }
[features]
default = ["sqlite"]
sqlite = ["corrosion-orm-core/sqlite"]
log = ["corrosion-orm-core/log"]
test-utils = ["corrosion-orm-core/test-utils"]
